test/compilable/imports/imp13582b.d
deprecated module imports.imp13582b;
