test/fail_compilation/imports/test2830f.d
module imports.test2830f;

private alias int TestAlias;
